--- a/src/app/components/admin/tabEspacios/tabEspacios.component.html
+++ b/src/app/components/admin/tabEspacios/tabEspacios.component.html
@@ -3,7 +3,10 @@
         <app-cardEspacio 
         [espacio_id]="espacio.espacio_id" 
         [name]="espacio.name"
-        [code]="espacio.code">
+        [code]="espacio.code"
+        [open_at]="espacio.open_at"
+        [close_at]="espacio.close_at"
+        >
         </app-cardEspacio>
     </div>
 </div>
