--- a/src/app/pages/admin/app-admin.component.css
+++ b/src/app/pages/admin/app-admin.component.css
@@ -4,9 +4,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.container{
-width: 100vw;
-}
 
 .menu-sidebar {
   position: relative;
@@ -46,7 +43,7 @@ width: 100vw;
   width: 60px;
 }
 
-.menu-item{
+.menu-item {
   padding-right: 10px;
 }
 
@@ -56,7 +53,7 @@ width: 100vw;
   color: #fff;
   font-weight: 600;
   font-size: 14px;
-  font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
+  font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
   vertical-align: middle;
 }
 
@@ -76,9 +73,10 @@ nz-header {
 
 nz-content {
   margin: 24px;
+  width: 100%;
 }
 
-.inner-content {
-  /* padding: 24px; */
-  height: 100vh;
+.app-layout {
+  width: 100%;
 }
+
