Initializing testing spec files, checks render of components

--- a/src/app/pages/admin/espacios/espacio-details/espacio-details.component.html
+++ b/src/app/pages/admin/espacios/espacio-details/espacio-details.component.html
@@ -17,8 +17,8 @@
                     <div class="col col-sm-6">
                         <select class= 'form-select' (change)='onSelectEspacio(val.id)' #val>
                             <option selected disabled value="null">Deporte</option>
-                            <option *ngFor="let item of arrEspacioPadre" [value]="item.name">
-                               {{ item.name }}
+                            <option *ngFor="let item of arrEspacioPadre" [value]="item?.name">
+                               {{ item?.name }}
                             </option>
                           </select>
                     </div>
@@ -26,8 +26,8 @@
                     <div class="col col-sm-6">
                         <select class= 'form-select' (change)='onSelectEspacio(val.id)' #val>
                             <option selected disabled value="null">Espacio Padre</option>
-                            <option *ngFor="let item of arrEspacioPadre" [value]="item.name">
-                               {{ item.name }}
+                            <option *ngFor="let item of arrEspacioPadre" [value]="item?.name">
+                               {{ item?.name }}
                             </option>
                           </select>
                     </div>
@@ -64,7 +64,7 @@
 
     <div class="row">
         <div class="col-sm-4">
-            <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold;">{{espacio.name}}</p>
+            <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold;">{{espacio?.name}}</p>
         </div>
         <div class="col-sm-3">
             <button class="btn" type="button" (click)="showEspacioModal()">
