--- a/src/app/components/admin/cardPanelAdmin/cardPanelAdmin.component.html
+++ b/src/app/components/admin/cardPanelAdmin/cardPanelAdmin.component.html
@@ -14,7 +14,7 @@
             <div class="col-sm">
                 <h4 nz-typography class="card-title" style="font-size: 0.5rem;">{{inactive}}</h4>
                 <p class="text-center"  style="font-size: 0.5rem;">Inactivas</p>
-                <span nz-icon nzType="stop" class="card-action-icon"></span>
+                <span nz-icon nzType="check" class="card-action-icon"></span>
             </div>
         </div>
         <p class="text-center"  style="font-size: 0.5rem;">Ultima edicion</p>
