--- a/src/app/components/admin/cardTorneo/cardTorneo.component.css
+++ b/src/app/components/admin/cardTorneo/cardTorneo.component.css
@@ -10,13 +10,27 @@
   width: 150px;
   height: 150px;
 }
+
 .card{
     width: 250px;
     height: 250px;
     /* align-items: center; */
     /* vertical-align: center; */
     background-color: #004892;
+    position: relative;
 }
+
+.card:hover:before {
+  content: 'a';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  filter: brightness(30%);
+  /* width: 300px; */
+}
+
 
 .image {
   width: 100%;
