--- a/src/app/pages/admin/espacios/espacios.component.html
+++ b/src/app/pages/admin/espacios/espacios.component.html
@@ -42,13 +42,15 @@
                         <ng-template #renderTemplateDeportes>
                             <div class="container container-select">
                                 <form class='form-list' (ngSubmit)="handleAddDeporte()" [formGroup]="formDeporte">
-                                    <input class="form-control" formControlName="name" type="text" nz-input
-                                        #inputElement placeholder="Añadir nuevo deporte" />
-                                    <a class="upload-btn" (click)="fileUpload.click()">
+                                    <input class="form-control form-control-add-list" formControlName="name" type="text"
+                                        nz-input #inputElement placeholder="Añadir nuevo deporte" />
+                                    <!-- <a class="upload-btn" (click)="fileUpload.click()">
                                         <span nz-icon nzType="upload"></span>
                                     </a>
                                     <input type="file" class="file-input" accept="image/png, image/jpeg"
-                                        (change)="addFileDeporte($event)" #fileUpload>
+                                        (change)="addFileDeporte($event)" #fileUpload> -->
+                                    <app-file-upload (newItemEvent)="addFileDeporte($event)" type="small"></app-file-upload>
+
                                     <a type='submit' class="add-item" (click)="handleAddDeporte()">
                                         <span nz-icon nzType="plus"></span> </a>
                                 </form>
@@ -89,14 +91,16 @@
                             placeholder="Detalles" />
                     </div>
                     <div class="col col-sm-3">
-                        <app-file-upload (newItemEvent)="addFileEspacio($event)"></app-file-upload>
+                        <app-file-upload (newItemEvent)="addFileEspacio($event)" size="big"></app-file-upload>
+                        <!-- <app-file-upload ></app-file-upload> -->
+
                     </div>
                     <div class="col col-sm-6">
-                        <input formControlName="time_max" type="number" class="form-control"
+                        <input formControlName="time_max" type="number" min="0" class="form-control"
                             placeholder="Tiempo max de reserva" />
                     </div>
                     <div class="col col-sm-6">
-                        <input formControlName="capacity" type="number" class="form-control"
+                        <input formControlName="capacity" type="number" min="0" class="form-control"
                             placeholder="Capacidad max" />
                     </div>
                     <div class="col col-sm-6" style="display: flex;vertical-align: middle;">
